[project]
name = "hello-render"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Louis Maddox", email = "louismmx@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
hello = "hello_render.main:hello"

[tool.pdm]
distribution = true
